--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Poppins:400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/min/main.css">
 </head>
 
@@ -118,22 +119,23 @@
                 <div class="work-container">
                   <div class="each-work">
                     <h4>Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt velit ipsum vel voluptatibus excepturi natus corporis error ut amet.</p>
+                    <a href="ux-ui1.html"> 
+                      Here's the story</a>
                     <img src="assets/img/work/uxui/1.jpg" alt="">
                   </div>
                   <div class="each-work">
                     <h4>Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt velit ipsum vel voluptatibus excepturi natus corporis error ut amet.</p>
+                    <a href="#">Here's the story</a>
                     <img src="assets/img/work/uxui/2.jpg" alt="">
                   </div>
                   <div class="each-work">
                     <h4>Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt velit ipsum vel voluptatibus excepturi natus corporis error ut amet.</p>
+                    <a href="#">Here's the story</a>
                     <img src="assets/img/work/uxui/3.jpg" alt="">
                   </div>
                   <div class="each-work">
                     <h4>Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt velit ipsum vel voluptatibus excepturi natus corporis error ut amet.</p>
+                    <a href="#">Here's the story</a>
                     <img src="assets/img/work/uxui/1.jpg" alt="">
                   </div>
 
@@ -257,10 +259,11 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/a27f13433b.js" crossorigin="anonymous"></script>
   <script>
     window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')
   </script>
-  <script src="assets/js/functions-min.js"></script>
+  <script src="assets/js/functions.js"></script>
 </body>
 
 </html>
