--- a/index.html
+++ b/index.html
@@ -114,40 +114,86 @@
               </div>
             </li>
 
+            <!-- UX Design -->
             <li class="l-section section">
               <div class="ux-ui-design">
                 <div class="work-container">
                   <div class="each-work">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
-                    <a href="ux-ui1.html"> 
+                    <h4>C-store Campaign Interface Design</h4>
+                    <a href="portfolio/ux-ui1.html"> 
                       Here's the story</a>
-                    <img src="assets/img/work/uxui/1.jpg" alt="">
+                    <img src="assets/img/work/uxui/cstore.png" alt="">
                   </div>
                   <div class="each-work">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
-                    <a href="#">Here's the story</a>
-                    <img src="assets/img/work/uxui/2.jpg" alt="">
+                    <h4>Web Application Interface Design</h4>
+                    <a href="portfolio/ux-ui2.html">Here's the story</a>
+                    <img src="assets/img/work/uxui/fundmore-webapp.png" alt="">
                   </div>
                   <div class="each-work">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
-                    <a href="#">Here's the story</a>
+                    <h4>Mobile Application Interface Design</h4>
+                    <a href="portfolio/ux-ui3.html">Here's the story</a>
                     <img src="assets/img/work/uxui/3.jpg" alt="">
-                  </div>
-                  <div class="each-work">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
-                    <a href="#">Here's the story</a>
-                    <img src="assets/img/work/uxui/1.jpg" alt="">
                   </div>
 
                 </div>
               </div>
             </li>
 
+            <!-- Web Frontend Design -->
             <li class="l-section section">
-              <div class="contact">
+              <div class="ux-ui-design">
+                <div class="work-container">
+                  <div class="each-work">
+                    <h4>Company Web Page Redesign</h4>
+                    <a href="portfolio/dev1.html"> 
+                      Here's the story</a>
+                    <img src="assets/img/work/dev/comm2po-web.png" alt="">
+                  </div>
+                  <div class="each-work">
+                    <h4>Web Application Demo Development</h4>
+                    <a href="portfolio/dev2.html">Here's the story</a>
+                    <img src="assets/img/work/dev/fundmore-webapp.png" alt="">
+                  </div>
+                  <div class="each-work">
+                    <h4>Website Development</h4>
+                    <a href="portfolio/dev3.html">Here's the story</a>
+                    <img src="assets/img/work/dev/fundmore-web.png" alt="">
+                  </div>
 
+                </div>
               </div>
             </li>
+
+            <!-- Digital Design -->
+            <li class="l-section section">
+              <div class="ux-ui-design">
+                <div class="work-container">
+                  <div class="each-work">
+                    <h4>Logo Design</h4>
+                    <a href="portfolio/digital1.html"> 
+                      Here's the story</a>
+                    <img src="assets/img/work/digital/bernardi-logo.png" alt="">
+                  </div>
+                  <div class="each-work">
+                    <h4>Marketing Motion Graphic Video</h4>
+                    <a href="portfolio/digital2.html">Here's the story</a>
+                    <img src="assets/img/work/digital/cancel.png" alt="">
+                  </div>
+                  <div class="each-work">
+                    <h4>Logo Design</h4>
+                    <a href="portfolio/digital3.html">Here's the story</a>
+                    <img src="assets/img/work/digital/gearforfit-logo.png" alt="">
+                  </div>
+                  <div class="each-work">
+                    <h4>Inforgraphic Video</h4>
+                    <a href="portfolio/digital4.html">Here's the story</a>
+                    <img src="assets/img/work/digital/pm.png" alt="">
+                  </div>
+
+                </div>
+              </div>
+            </li>
+
             <li class="l-section section">
               <div class="hire">
                 <h2>You want us to do</h2>
