--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <!-- notification for small viewports and landscape oriented smartphones -->
   <div class="device-notification">
     <a class="device-notification--logo" href="#0">
-      <img src="assets/img/logo.png" alt="Global">
-      <p>Global</p>
+      <img class="logo-main" src="assets/img/logo-main.png" alt="Logo">
+      <p>Logo</p>
     </a>
-    <p class="device-notification--message">Global has so much to offer that we must request you orient your device to
+    <p class="device-notification--message">Logo has so much to offer that we must request you orient your device to
       portrait or find a larger screen. You won't be disappointed.</p>
   </div>
 
@@ -29,10 +29,9 @@
         <div class="l-wrapper">
           <header class="header">
             <a class="header--logo" href="index.html">
-              <img src="assets/img/logo.png" alt="Global">
-              <p>Rico Monden</p>
+              <img class="logo-main" src="assets/img/logo-main.png" alt="Logo">
             </a>
-            <button class="header--cta cta">Hire Us</button>
+            <button class="header--cta view-ux">View Portfolios</button>
             <div class="header--nav-toggle">
               <span></span>
             </div>
@@ -52,7 +51,7 @@
               <div class="intro">
                 <div class="intro--banner">
                   <h1>Hi I'm Rico.<br><small>I design your experience</small></h1>
-                  <button class="cta">Hire Us
+                  <button class="view-ux">View Portfolios
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118"
                       style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -85,7 +84,9 @@
             <li class="l-section section">
               <div class="about">
                 <div class="about--banner">
-                  <h2>We<br>believe in<br>passionate<br>people</h2>
+                  <h2>Interactive Media Designer Based in Ottawa</h2>
+                  <p>I am a Japanese Designer. I like traveling. I've been to Seattle, South Korea, Sydney and Toronto. Now, I'm studying Interactive Media Design at Algonquin College to build my career in Graphic Design and Web Design. If you'd like to see my CV, please feel free to get in touch.
+                    </p>
                   <a href="#0">View my resume
                     <span>
                       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -98,18 +99,8 @@
                       </svg>
                     </span>
                   </a>
-                  <img src="assets/img/about-visual.png" alt="About Us">
-                </div>
-                <div class="about--options">
-                  <a href="#0">
-                    <h3>Winners</h3>
-                  </a>
-                  <a href="#0">
-                    <h3>Philosophy</h3>
-                  </a>
-                  <a href="#0">
-                    <h3>History</h3>
-                  </a>
+                  <img src="assets/img/about-image.png" alt="About Us">
+                  <img class="logo" src="assets/img/logo-white.png" alt="About Us">
                 </div>
               </div>
             </li>
