--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </li>
 
             <!-- UX Design -->
-            <li class="l-section section">
+            <li class="l-section section uxBg">
               <div class="ux-ui-design">
                 <div class="work-container">
                   <div class="each-work">
