--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Poppins:400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/min/main.css">
+  <link rel="icon" type="image/png" href="../assets/img/logo-main.png">
 </head>
 
 <body>
@@ -62,20 +63,29 @@
                     </svg>
                     <span class="btn-background"></span>
                   </button>
+                  <div class="preview-img active">
+                    <img src="assets/img/work/uxui/cstore.png" alt="">
+                  </div>
+                  <div class="preview-img">
+                    <img src="assets/img/work/dev/fundmore-webapp.png" alt="">
+                  </div>
+                  <div class="preview-img">
+                    <img src="assets/img/work/digital/cancel.png" alt="">
+                  </div>
                   <!-- <img src="assets/img/introduction-visual.png" alt="Welcome"> -->
                 </div>
                 <div class="intro--options">
-                  <a href="#0">
-                    <h3>UX / UI Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <a href="#0" class="active">
+                    <h3 class="view-ux">UX / UI Design</h3>
+                    <p>Desgined mobile application interface for drone management system, interactive campaign at gas station and web application design for mortgage process.</p>
                   </a>
                   <a href="#0">
-                    <h3>Web / Front-end Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                    <h3 class="view-web">Web / Front-end Development</h3>
+                    <p>Designed websites with HTML, CSS, WordPress, also have developed frontend of webapplication demo using Java Script.</p>
                   </a>
                   <a href="#0">
-                    <h3>Digital Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                    <h3 class="view-digital">Digital Design</h3>
+                    <p>Poster Design Vector Design, Logo and Business card using Adobe Photoshop and Illustrator. Also motion graphics using Adobe After Effects</p>
                   </a>
                 </div>
               </div>
@@ -108,6 +118,7 @@
             <!-- UX Design -->
             <li class="l-section section uxBg">
               <div class="ux-ui-design">
+                  <h2>UX / UI Design</h2>
                 <div class="work-container">
                   <div class="each-work">
                     <h4>C-store Campaign Interface Design</h4>
@@ -125,7 +136,6 @@
                     <a href="portfolio/ux-ui3.html">Here's the story</a>
                     <img src="assets/img/work/uxui/3.jpg" alt="">
                   </div>
-
                 </div>
               </div>
             </li>
@@ -133,6 +143,7 @@
             <!-- Web Frontend Design -->
             <li class="l-section section">
               <div class="ux-ui-design">
+                <h2>Web / Front-end Development</h2>
                 <div class="work-container">
                   <div class="each-work">
                     <h4>Company Web Page Redesign</h4>
@@ -158,6 +169,7 @@
             <!-- Digital Design -->
             <li class="l-section section">
               <div class="ux-ui-design">
+                <h2>Digital Design</h2>
                 <div class="work-container">
                   <div class="each-work">
                     <h4>Logo Design</h4>
@@ -187,7 +199,7 @@
 
             <li class="l-section section">
               <div class="hire">
-                <h2>You want us to do</h2>
+                <h2>Please choose a service you are looking for</h2>
                 <!-- checkout formspree.io for easy form setup -->
                 <form class="work-request">
                   <div class="work-request--options">
@@ -226,7 +238,7 @@
                               d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
                           </g>
                         </svg>
-                        Motion Design
+                        Motion Graphics
                       </label>
                     </span>
                     <span class="options-b">
@@ -252,7 +264,7 @@
                               d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
                           </g>
                         </svg>
-                        Webdesign
+                        Web Design
                       </label>
                       <input id="opt-6" type="checkbox" value="marketing">
                       <label for="opt-6">
@@ -264,7 +276,7 @@
                               d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
                           </g>
                         </svg>
-                        Marketing
+                        Branding
                       </label>
                     </span>
                   </div>
