--- a/portfolio/dev3.html
+++ b/portfolio/dev3.html
@@ -44,7 +44,7 @@
             </div>
             <div class="ux-ui-design">
                     <div class="each-work">
-                        <h4>Interface Designs</h4>
+                        <h4>Website Designs</h4>
                         <img src="../assets/img/work/dev/fundmore-web.png" alt="">
                         </div>
                 <div class="side-bar-sec">
