--- a/portfolio/ux-ui3.html
+++ b/portfolio/ux-ui3.html
@@ -37,7 +37,7 @@
                             <img src="../../assets/img/work/uxui/cstore.png" alt=""> -->
                         </div>
                 <div class="work-container">
-                    <p>We developed interactive interfaces and content for the gas station campaign for a client and we implemented the policy and branding guide from Canadian Tire Gas+ which is a potential company for the client. We designed the interface to be an effective user-centered campaign that engages the target audience of Generation Z. The purpose of this project was to increase sales in the Gas+ c-stores as well as to promote sales for the Canadian Tire through promotions.</p>
+                    <p>DroneEntry is a drone startup company that provides a web application for drone pilots to manage portfolio, and for enterprises to manage projects effectively. We designed iOS mobile application interfaces for enterprise modules and for pilot views that are revealed on the enterprise modules. A primary target audience of this mobile application will be a new enterprise companies and it will be mainly used for managing pilots, projects, documents and clients on site.</p>
                 </div>
 
                 
