--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li><span>UX / UI Design</span></li>
               <li><span>Web / Front-end Development</span></li>
               <li><span>Digital Design</span></li>
-              <li><span>Hire us</span></li>
+              <li><span>Contact</span></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
@@ -52,7 +52,7 @@
               <div class="intro">
                 <div class="intro--banner">
                   <h1>Hi I'm Rico.<br><small>I design your experience</small></h1>
-                  <button class="view-ux">View Portfolios
+                  <button class="view-ux">View More Portfolios
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118"
                       style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -301,14 +301,15 @@
     <ul class="outer-nav">
       <li class="is-active">Home</li>
       <li>About</li>
-      <li>Works</li>
+      <li>UX / UI Design</li>
+      <li>Web / Front-end Development</li>
+      <li>Digital Design</li>
       <li>Contact</li>
-      <li>Hire us</li>
     </ul>
   </div>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/a27f13433b.js" crossorigin="anonymous"></script>
+  <script src="assets/js/vendor/hammer-2.0.8.js" crossorigin="anonymous"></script>
   <script>
     window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')
   </script>
